# python-snippets

chat-room/: README.md
chat-room/client/: metadata.py  pyproject.toml
chat-room/client/src/: main.py
chat-room/client/src/core/: __init__.py  client.py  main.py
chat-room/server/: pyproject.toml
chat-room/server/src/: config.ini  main.py
chat-room/server/src/configuration/: configuration.py
chat-room/server/src/core/: __init__.py  main.py  server.py
chat-room/shared/: pyproject.toml  pytest.ini
chat-room/shared/src/kchat_shared.tests/message.tests/: message_test.py
chat-room/shared/src/kchat_shared/logging/: __init__.py
chat-room/shared/src/kchat_shared/message/: __init__.py  message.py
chat-room/shared/src/log_initializer/: __init__.py  log_initializer.py
chat-room/shared/src/message/: __init__.py  message.py
chat-room/shared/src/message.tests/: message_test.py
drawing/: content.py  engine.py  input.py  main.py  message.py  renderable.py  terminal.py
mutable-default/: main.py
python-concepts/build-systems/: LICENSE.txt
python-concepts/build-systems/src/: metadata.py  pyproject.toml
python-concepts/build-systems/src/core/: main.py
python-concepts/build-systems/src/core.tests/: main.tests.py  main_test.py
python-concepts/namespaces/: main.py
python-concepts/namespaces/module/: __init__.py  main.py  scopes.py
python-concepts/processes/: main.py
python-concepts/processes/concurrent-access/: main.py
python-concepts/processes/piping-processes/: main.py
python-concepts/processes/wait-alternative/: main.py
python-concepts/select/: README.md  using-epoll.py  using-select.py
python-concepts/signal/: README.md  main.py
python-concepts/string-pooling/: main.py
string-pooling/: main.py
tetris/: metadata.json  pyproject.toml
tetris/src/core/: block_size.py  board.py  border_decorator.py  event_bus.py  game.py  main.py  piece.py
using-packages/: main.py
using-packages/simple_package/: __init__.py  submodule.py
