[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kchat-client"
requires-python = ">=3.12"
description = "Chat server client"
dynamic = ["version", "authors", "license"]
dependencies = [
    "kchat-shared @ {root:uri}/../shared",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "metadata.py"

[project.scripts]
client = "core.main:main"

[tool.hatch.envs.default.scripts]
run = "client"

[tool.hatch.envs.build]
detatched = true

[tool.hatch.envs.build.env-vars]
PYAPP_DISTRIBUTION_EMBED = "true"
PYAPP_UV_ENABLED = "true"
PYAPP_PYTHON_VERSION = "3.12"

[tool.hatch.envs.build.scripts]
build = [
    "hatch build -c -t wheel",
    "export PYAPP_PROJECT_PATH=$(ls -t {root}/dist/*.whl | head -n 1)",
    "hatch build -t binary"
]

[tool.hatch.build.targets.binary]
scripts = ["client"]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

