[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build_systems"
requires-python = ">=3.12"
description = "messing around with hatch"
dependencies = []
dynamic = ["version", "authors", "license"]

[project.scripts]
my_application = "core.main:main"

[tool.hatch.metadata.hooks.custom]
path = "metadata.py"

[tool.hatch.envs.test]
template = "default"
dependencies = [
    "pytest"
]

[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.hatch.envs.build]
detatched = true

[tool.hatch.envs.build.env-vars]
PYAPP_DISTRIBUTION_EMBED = "true"
PYAPP_PROJECT_PATH = "{root}/dist/build_systems-1.0.0-py3-none-any.whl"
PYAPP_UV_ENABLED = "true"
PYAPP_PYTHON_VERSION = "3.12"

[tool.hatch.envs.build.scripts]
build = [
    "hatch build -c -t wheel",
    "hatch build -t binary"
]

[tool.hatch.build.targets.binary]
scripts = ["my_application"]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.build.targets.wheel.source]
"core" = "core"

